Fix gaps in filter badge arrows, fix snowflake display issue

--- a/system/application/views/melons/cantaloupe/css/common.css
+++ b/system/application/views/melons/cantaloupe/css/common.css
@@ -1477,20 +1477,16 @@ body>.annotorious-popup{
   margin-left:5px;
 }
 .lens-editor .snowflake {
-	position:absolute;
-	top:6px;
-	right:50px;
 	background:url(../images/snowflake.png);
   background-repeat:no-repeat;
   background-size:100%;
   background-position:50% 50%;
-  width:32px;
-  height:32px;
+  width:25px;
+  height:25px;
+
+	margin-right:3px;
 }
 .lens-editor .badge {
-  position: absolute;
-	top: 10px;
-	right: 10px;
   padding: 5px 10px;
   font-size:14px;
   font-weight:200;
@@ -1498,6 +1494,14 @@ body>.annotorious-popup{
 	min-width: 24px;
 	height: 24px;
 	border-radius:20px;
+	float:right;
+}
+.no-padding {
+	padding:0;
+}
+.no-bg {
+	background:transparent !important;
+	border:none !important;
 }
 .lens-editor .spinner {
 	margin: 6px;
@@ -1686,12 +1690,15 @@ body>.annotorious-popup{
 }
 
 .filter-modal-container {
-	border:3px solid lightgrey;
-	padding:15px 25px;
-	max-width: 400px;
-	margin: 40px auto;
+	display: flex;
+  align-items: center;
+  justify-content: center;
+	padding:15px;
+}
+.filter-modal-content {
 	text-align:center;
-	min-height:150px;
+	border:3px solid lightgrey;
+	padding:15px;
 }
 /* .filter-modal-container span {
 	vertical-align:middle;
@@ -1703,39 +1710,18 @@ body>.annotorious-popup{
 	max-width: 245px;
 	margin:0 auto;
 }
-.filter-counters .left-badge,
-.filter-counters .right-badge,
-.filter-counters .filter-arrow  {
-	position:absolute;
-}
-.filter-counters .left-badge {
-	left:20px;
-	top:50%;
-}
-.filter-counters .right-badge {
-	right:20px;
-	top:50%;
-}
-.filter-counters .counter {
-	padding: 3px 7px;
-  font-size: 14px;
-  font-weight: 200;
-  border:1px solid lightgrey;
-	border-radius: 10px;
+.counter {
+	padding: 1px 10px 2px;
+  border:2px solid #ccc;
+	border-radius: 20px;
 }
 .filter-arrow {
 	background-image:url(../images/right_arrow.png);
 	background-size:100%;
 	background-repeat:no-repeat;
 	background-position:50% 50%;
-	width:50px;
+	width:100%;
 	height:25px;
-}
-.left-badge .filter-arrow {
-	left:30px;
-}
-.right-badge .filter-arrow {
-	left:-50px;
 }
 .dropdown-menu li {
 	margin-left:0 !important;
@@ -1795,7 +1781,6 @@ span.base {
 .match-count-sort-form .row {
 	margin:13px 0 !important;
 }
-
 .options-menu {
 	float:right;
 }
